# vyrn

./: .gitignore  CLAUDE.md  Cargo.toml  chat  test_len.vyn  test_mut.vyn  test_u32.vyn
.claude/: settings.local.json
examples/: fibonacci.vyn  generator.vyn  named_loops.vyn  stdlib_demo.vyn  struct_example.vyn  test_labeled_break.vyn  test_labeled_continue.vyn  test_simple_continue.vyn
src/: ast.rs  codegen.rs  lexer.rs  lsp.rs  main.rs  parser.rs  runtime.rs  token.rs
vscode-extension/: .vscodeignore  extension.js  language-configuration.json  package-lock.json  package.json  vyrn-language-0.1.0.vsix
vscode-extension/syntaxes/: vyrn.tmLanguage.json
