[package]
name = "vyrn"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json         = "1"
cranelift-codegen  = "0.116"
cranelift-frontend = "0.116"
cranelift-jit      = "0.116"
cranelift-module   = "0.116"
cranelift-native   = "0.116"
cranelift-object   = "0.116"
target-lexicon     = "0.12"
